# mlir-onnx-toy

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
src/: CMakeLists.txt
src/dialect/toy/: ToyDialect.h  ToyDialect.td  ToyOps.td
src/frontend/onnx/: CMakeLists.txt  importer.cpp  importer.hpp  input_model.hpp
src/lib/: toy.cpp
src/tablegen/dialect/toy/: CMakeLists.txt  Toy.td  ToyOps.h  ToyOps.td
src/tools/: CMakeLists.txt
tests/lit/: toy-add.mlir
